// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PINInput Component Basic Rendering renders correctly with label 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "marginBottom": 24,
    }
  }
>
  <Text
    maxFontSizeMultiplier={2}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    Enter PIN
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#25272A",
        "borderColor": "#FFFFFF",
        "borderRadius": 25,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "height": 56,
        "opacity": 0.8,
        "paddingHorizontal": 16,
      }
    }
  >
    <TextInput
      accessibilityLabel="PIN Input Field"
      accessible={true}
      autoFocus={false}
      keyboardType="number-pad"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder=""
      placeholderTextColor="#888888"
      secureTextEntry={true}
      style={
        Object {
          "color": "#FFFFFF",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
      testID="code-field"
      textContentType="password"
      value=""
    />
    <View
      accessibilityLabel="PINCreate.Show"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 12,
        }
      }
      testID="com.ariesbifold:id/Show"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`PINInput Component Basic Rendering renders without label when not provided 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "marginBottom": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#25272A",
        "borderColor": "#FFFFFF",
        "borderRadius": 25,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "height": 56,
        "opacity": 0.8,
        "paddingHorizontal": 16,
      }
    }
  >
    <TextInput
      accessible={true}
      autoFocus={false}
      keyboardType="number-pad"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder=""
      placeholderTextColor="#888888"
      secureTextEntry={true}
      style={
        Object {
          "color": "#FFFFFF",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
      textContentType="password"
      value=""
    />
    <View
      accessibilityLabel="PINCreate.Show"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 12,
        }
      }
      testID="com.ariesbifold:id/Show"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`PINInput Component Error Messages renders inline error message above when specified 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "marginBottom": 24,
    }
  }
>
  <Text
    maxFontSizeMultiplier={2}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    Enter PIN
  </Text>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "marginVertical": 5,
          "paddingRight": 20,
        },
        undefined,
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Array [
            Object {
              "color": "#ff0000",
              "fontSize": 16,
              "fontWeight": "normal",
            },
          ],
        ]
      }
      testID="com.ariesbifold:id/InlineErrorText"
    >
      Invalid PIN
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#25272A",
        "borderColor": "#FFFFFF",
        "borderRadius": 25,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "height": 56,
        "opacity": 0.8,
        "paddingHorizontal": 16,
      }
    }
  >
    <TextInput
      accessibilityLabel="PIN Input Field"
      accessible={true}
      autoFocus={false}
      keyboardType="number-pad"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder=""
      placeholderTextColor="#888888"
      secureTextEntry={true}
      style={
        Object {
          "color": "#FFFFFF",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
      testID="code-field"
      textContentType="password"
      value=""
    />
    <View
      accessibilityLabel="PINCreate.Show"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 12,
        }
      }
      testID="com.ariesbifold:id/Show"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`PINInput Component Error Messages renders inline error message below when specified 1`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "marginBottom": 24,
    }
  }
>
  <Text
    maxFontSizeMultiplier={2}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 14,
          "fontWeight": "bold",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    Enter PIN
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#25272A",
        "borderColor": "#FFFFFF",
        "borderRadius": 25,
        "borderWidth": 1.5,
        "flexDirection": "row",
        "height": 56,
        "opacity": 0.8,
        "paddingHorizontal": 16,
      }
    }
  >
    <TextInput
      accessibilityLabel="PIN Input Field"
      accessible={true}
      autoFocus={false}
      keyboardType="number-pad"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder=""
      placeholderTextColor="#888888"
      secureTextEntry={true}
      style={
        Object {
          "color": "#FFFFFF",
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 16,
          "fontWeight": "500",
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
      testID="code-field"
      textContentType="password"
      value=""
    />
    <View
      accessibilityLabel="PINCreate.Show"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        Object {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 44,
          "left": 44,
          "right": 44,
          "top": 44,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
          "paddingLeft": 12,
        }
      }
      testID="com.ariesbifold:id/Show"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "flexDirection": "row",
          "marginVertical": 5,
          "paddingRight": 20,
        },
        undefined,
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Array [
            Object {
              "color": "#ff0000",
              "fontSize": 16,
              "fontWeight": "normal",
            },
          ],
        ]
      }
      testID="com.ariesbifold:id/InlineErrorText"
    >
      PIN too short
    </Text>
  </View>
</View>
`;
